--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 <div id="footer-bar" class="footer-bar bg footer-bar-detached">
   <a href="https://nabogaming.github.io/Nyumbani/" ><i class="bi bi-house font-20"></i><span>Nyumbani</span></a>
-<a href="https://nabogaming.github.io/Matukio/"><i class="bi bi-tv font-21"></i><span>Matokeo</span></a>
+<a href="https://nabogaming.github.io/Matokeo/"><i class="bi bi-tv font-21"></i><span>Matokeo</span></a>
 <a href="https://nabogaming.github.io/FAQ/"><i class="bi bi-file-text font-21"></i><span>Sheria</span></a>
 <a href="https://nabogaming.github.io/GameOn/" class="active-nav"><i class="bi bi-controller font-24"></i><span>GameOn</span></a>
 <a href="https://nabogaming.github.io/ChatPlace/"><i class="bi bi-people font-24"></i><span>ChatPlace</span></a></div>
