--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Karla Black is a name used when you generate a text with an anonymous name.
       
     </div>
           <div id="new" class="card-bottom pb-3 px-3">
-<h3 class="color-white text-uppercase">Alhamisi Ya Moto Kuliko Zote</h3>
+<h3 class="color-white text-uppercase">Jumamosi Ya Moto Kuliko Zote</h3>
 <p class="color-white opacity-70 mb-0 mt-n1">Kaa Tayari Kwa Pubg Mobile Na Free Fire Chaos ( 4 Vs 4 )</p>
 </div>
          <!--<div class="card-top" style="top: 13px; margin-right: 2%;">
@@ -312,9 +312,9 @@ Karla Black is a name used when you generate a text with an anonymous name.
 <div id="menu-color" style="height:270px;margin-bottom:50%;" class="bg-dark offcanvas offcanvas-bottom offcanvas-detached rounded-m">
     <br>
     <div class="card card-style bg-dark">
-    <h3 class="color-white text-center text-uppercase" style="margin-top:40px;">Alhamisi Ya Moto Kuliko Zote</h3>
+    <h3 class="color-white text-center text-uppercase" style="margin-top:40px;">Jumamosi Ya Moto Kuliko Zote</h3>
 <hr>
-    <h6 style="padding:10px;margin-top:-10px;" class="color-white font-200 text-center">Hii Ndo Alhamisi Ya Battle, Watu Wa Pubg Mobile Global Na Freefire The Chaos. Cheza Na Squad Yako ( 4 Vs 4 ) Na Mshinde Pesa Zaidi Ya Mlizoweka. Kiingilio Kwa Kila Squad Ni Tshs 1000/= (Kila Member Au SquadMate Wa Squad Hiyo Atachangia Tshs 1000/= Na Squad Itayoshinda Itapewa Zawadi Tshs 6000/=  Tunawatakia Maandalizi Mema </h6>
+    <h6 style="padding:10px;margin-top:-10px;" class="color-white font-200 text-center">Hii Ndo Jumamosi Ya Battle, Watu Wa Pubg Mobile Global Na Freefire The Chaos. Cheza Na Squad Yako ( 4 Vs 4 ) Na Mshinde Pesa Zaidi Ya Mlizoweka. Kiingilio Kwa Kila Squad Ni Tshs 1000/= (Kila Member Au SquadMate Wa Squad Hiyo Atachangia Tshs 1000/= Na Squad Itayoshinda Itapewa Zawadi Tshs 7200/=  Tunawatakia Maandalizi Mema </h6>
 </div>
 </div>
 <script>function startCountdown(expiryDate) {var deadline = new Date(expiryDate).getTime();var x = setInterval(function() {var now = new Date().getTime();var distance = deadline - now;var days = Math.floor(distance / (1000 * 60 * 60 * 24));var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));var seconds = Math.floor((distance % (1000 * 60)) / 1000);document.getElementById("timer").innerHTML = "<i class='bi bi-clock'></i> " + days + "d " + hours.toString().padStart(2, '0') + "h "+ minutes.toString().padStart(2, '0') + "m " +  seconds.toString().padStart(2, '0') + "s";if (distance < 0) {clearInterval(x);
